# ditech-site-docs-frappe

./: README.md  pyproject.toml
ditech_site_docs/: hooks.py  install.py  modules.txt
ditech_site_docs/ditech_site_docs/: setup.py
ditech_site_docs/ditech_site_docs/doctype/msp_site/: msp_site.js  msp_site.json  msp_site.py  msp_site_dashboard.py
ditech_site_docs/ditech_site_docs/doctype/msp_site_account/: msp_site_account.js  msp_site_account.json  msp_site_account.py  msp_site_account_dashboard.py
ditech_site_docs/ditech_site_docs/doctype/msp_site_device/: msp_site_device.js  msp_site_device.json  msp_site_device.py
