[project]
name = "ditech_site_docs"
authors = [
    { name = "Ditech", email = "support@fedoratechnology.com" }
]
description = "Site documentation + inventory DocTypes for ERPNext (Ditech MSP use)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
